Fixed CMake and started on CollisionObject

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,9 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.31)
-PROJECT(Blython)
+cmake_minimum_required(VERSION 3.31)
+project(Blython)
 
-option(MAKE_SUBMODULES "This is to decide whether to compile SDL(_image) or not" OFF)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+set(BUILD_SHARED_LIBS OFF)
 
-set(CMAKE_BUILD_TYPE Debug)
-
-add_executable(${PROJECT_NAME} src/main.cpp)
-
-if(MAKE_SUBMODULES)
-    add_subdirectory(external/SDL)
-    add_subdirectory(external/SDL_image)
-endif()
-
-target_include_directories(${PROJECT_NAME}
-    PUBLIC external/SDL/include
-    PUBLIC external/SDL_image/include
-    PUBLIC include
-)
-
-target_link_directories(${PROJECT_NAME}
-    PRIVATE build/external/SDL
-    PRIVATE build/external/SDL_image
-)
-
-target_link_libraries(${PROJECT_NAME}
-    SDL3
-    SDL3_image
-)
+add_subdirectory(src/)
+add_subdirectory(external/)
+add_subdirectory(include/)
